change Game class to a record